<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cadastro_titulo" />

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cadastro_descrição" />

    <Spinner
        android:id="@+id/spinner_disciplina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/tagsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag1" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag2" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag3" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag4" />
    </RadioGroup>

    <!-- Novo campo para selecionar arquivo -->
    <Button
        android:id="@+id/button_selecionar_arquivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecionar Arquivo"
        android:onClick="selectFileButtonOnClick" />

    <!-- Exibir nome do arquivo selecionado -->
    <TextView
        android:id="@+id/textview_arquivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nenhum arquivo selecionado"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveButtonOnClick"
        android:text="Salvar" />

</LinearLayout>